# RTOS-free_HCI_controller_sample

./: .gitignore  CMakeLists.txt  README.md  main.c  rand_numbers.c  rand_numbers.h  toolchain.cmake  west.yml
.west/: config
nrfx_porting/: nrfx_config.h  nrfx_glue.h  nrfx_log.h
